<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="horizontal|vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/pokemon_thumbnail"
                app:layout_constraintEnd_toEndOf="@+id/pokemon_thumbnail"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/pokemon_thumbnail"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/pokemon_thumbnail"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pokemon_thumbnail">

                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/height_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height_label"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/design_default_color_on_primary" />
                    <TextView
                        android:id="@+id/pokemon_height"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pokemon_Id"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/design_default_color_on_primary" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_base_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="15dp"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@id/card_height"
                app:layout_constraintTop_toBottomOf="@id/pokemon_thumbnail">

                <LinearLayout
                    android:layout_margin="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/base_experience_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/base_experience_label"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/design_default_color_on_primary" />

                    <TextView
                        android:id="@+id/base_experience"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pokemon_Id"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/design_default_color_on_primary" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/id_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_height" />

            <TextView
                android:id="@+id/pokemon_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pokemon_Id"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintBottom_toBottomOf="@id/id_label"
                app:layout_constraintStart_toEndOf="@id/id_label"
                app:layout_constraintTop_toTopOf="@id/id_label" />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/pokemon_name_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_label" />

            <TextView
                android:id="@+id/pokemon_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pokemon_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintBottom_toBottomOf="@id/name_label"
                app:layout_constraintStart_toEndOf="@id/name_label"
                app:layout_constraintTop_toTopOf="@id/name_label" />

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/pokemon_Weight_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stats_label" />

            <TextView
                android:id="@+id/pokemon_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pokemon_Id"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintBottom_toBottomOf="@id/weight_label"
                app:layout_constraintStart_toEndOf="@id/weight_label"
                app:layout_constraintTop_toTopOf="@id/weight_label" />

            <TextView
                android:id="@+id/stats_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/pokemon_stats_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label" />

            <TextView
                android:id="@+id/pokemon_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:maxWidth="250dp"
                android:text="@string/pokemon_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/design_default_color_on_primary"
                app:layout_constraintBottom_toBottomOf="@id/stats_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/stats_label"
                app:layout_constraintTop_toTopOf="@id/stats_label" />

            <TextView
                android:id="@+id/abilities_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/pokemon_abilities_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weight_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/abilitiesRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abilities_label" />

            <TextView
                android:id="@+id/held_items_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/pokemon_held_items_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movesRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/heldItemsRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/held_items_label" />

            <TextView
                android:id="@+id/moves_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/pokemon_moves_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/abilitiesRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movesRecycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/moves_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
