<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginStart="8dp"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/colorPrimary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressThumbnail"
            android:layout_width="120dp"
            android:layout_height="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pokemonThumbnail"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pokemon_thumbnail"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressThumbnail" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            app:cardBackgroundColor="@color/design_default_color_background"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@id/pokemonThumbnail"
            app:layout_constraintStart_toStartOf="parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:padding="4dp">
                <TextView
                    android:id="@+id/pokemonId"
                    android:text="@string/pokemon_Id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                     />

                <TextView
                    android:id="@+id/pokemonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pokemon_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>